--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lexical": "^0.30.0",
     "lucide-react": "^0.525.0",
     "mime-types": "^3.0.1",
-    "next": "15.2.4",
+    "next": "^15.1.9",
     "nodemailer": "^6.10.1",
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
