--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-resize-image": "^1.0.5",
-    "react": "^18.3.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
     "react-quill-new": "^3.4.6",
