--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/complete-profile"
+    "app/complete-profile",
+    "next.config.mjs"
   ],
   "exclude": ["node_modules"]
 }
