--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "lexical": "^0.30.0",
     "lucide-react": "^0.525.0",
     "mime-types": "^3.0.1",
-    "next": "^14.2.18",
+    "next": "^16.0.8",
     "nodemailer": "^6.10.1",
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-resize-image": "^1.0.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
     "react-quill-new": "^3.4.6",
     "react-select": "^5.10.1",
     "react-time-picker": "^7.0.0",
+    "tailwind": "^4.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -57,9 +58,11 @@
     "@types/quill": "^2.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
     "i": "^0.3.7",
     "npm": "^11.3.0",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
