--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "react-select": "^5.10.1",
     "react-time-picker": "^7.0.0",
     "tailwind": "^4.0.0",
-    "uuid": "^11.1.0",
-    "tailwindcss": "^4"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -63,6 +62,11 @@
     "i": "^0.3.7",
     "npm": "^11.3.0",
     "postcss": "^8.5.6",
+    "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.14",
+    "lightningcss-linux-x64-gnu": "^1.29"
   }
 }
